// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndexNavigation 閉じた時のスナップショット 1`] = `
"<div>
  <index-nav-stub></index-nav-stub>
  <index-list-stub tocs=\\"[object Object],[object Object],[object Object],[object Object],[object Object]\\"></index-list-stub>
</div>"
`;

exports[`IndexNavigation 開いた時のスナップショット 1`] = `
"<div>
  <index-nav-stub isopen=\\"true\\"></index-nav-stub>
  <index-list-stub tocs=\\"[object Object],[object Object],[object Object],[object Object],[object Object]\\" is-open=\\"true\\"></index-list-stub>
</div>"
`;
